2014-10-16 belangeo <belangeo@gmail.com>

    * OSX installer: Also install pyo in anaconda site-packages directory if exist.
    - rev 1253

2014-10-16 belangeo <belangeo@gmail.com>

    * Added new object : TrigBurst, generates a time/amplitude expandable trigger pattern.
    - rev 1252

2014-10-14 belangeo <belangeo@gmail.com>

    * Added new object : Euclide, Euclidean rhythm generator.
    - rev 1251

2014-10-13 belangeo <belangeo@gmail.com>

    * Windows installers now check for the current python installation directory before installing files.
    - rev 1244 - 1250

2014-10-10 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed inconsistencies in Find/Replace behaviours.
    - rev 1241

2014-10-10 belangeo <belangeo@gmail.com>

    * Added new object : SmoothDelay, a delay line that does not produce clicks or pitch shifting when the delay time is changing.
    - rev 1239

2014-10-08 belangeo <belangeo@gmail.com>

    * Added new object : AttackDetector, audio signal onset detection.
    - rev 1238

2014-10-07 belangeo <belangeo@gmail.com>

    * Added new object : Centroid, Computes the spectral centroid of an input signal.
    - rev 1237

-------------------------------------------------------------------------------------

2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.1.
    - rev 1236

2014-09-12 belangeo <belangeo@gmail.com>

    * E-Pyo: Added RadioPyo to the template choices.  
    - rev 1234

2014-09-09 belangeo <belangeo@gmail.com>

    * Fixed Compare when used with None or a string. Print a warning and set 'comp' attribute to 0. 
    - rev 1229

2014-09-05 belangeo <belangeo@gmail.com>

    * Fixed live interpreter of the server window when using arrow keys navigation.
    - rev 1228

2014-09-04 belangeo <belangeo@gmail.com>

    * E-Pyo: Check if WxPython 3.0 is installed, otherwise uses 2.8.
    - rev 1227

2014-09-02 belangeo <belangeo@gmail.com>
